--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "d3-plugins": "*",
     "underscore": "~1.7.0",
     "simplify-js": "https://github.com/mourner/simplify-js.git",
-    "topojson": "~1.6.18"
+    "topojson": "~1.6.18",
+    "d3-carto-map": "https://github.com/emeeks/d3-carto-map.git"
   }
 }
